# Lambda-Ssakssak

./: .gitignore  README.md  pyvenv.cfg  setup.cfg  test.py
cli/: cli_entrypoint.py
lib/: arn_validators.py  aws_accessor.py  aws_client_factory.py  aws_factory.py  common_utils.py  context.py  lambda_dereference_finder.py  lambda_mapper.py  lambda_version.py  lambda_version_chooser.py  lambda_version_gatherer.py  lambda_version_mapper.py  restapi_mapper.py  test.py
lib/dereferences/: dereference_gatherer_apigw.py
src/lambda_ssakssak/: aws_factory.py  cleaner.py  cli_entrypoint.py  lambda_mapper.py  lambda_version_chooser.py  lambda_version_gatherer.py  lambda_version_mapper.py
