[metadata]
name = lambda-ssakssak
version = 0.1.0
author = JayJayDee <jindongp@gmail.com>
description = A tiny CLI script for cleaning up old lambda versions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = cli, command-line, tool, lambda

[options]
packages = find:
install_requires =
    click
python_requires = >=3.10.12

[options.entry_points]
console_scripts =
    lambda-ssakssak = cli.cli_entrypoint:main